08-Sep-2016 Xcode Target.EnsureFileOfTypeExists() now accepts an optional argument to say that the file type is not explicit, i.e. it is then a lastKnownFileType. Defaults to true (type is explicit), as was previous behaviour.

08-Sep-2016 Xcode FileReferences now include the Text type.

25-Aug-2016 ======== Version 1.0.4 beta 1 Release ========

25-Aug-2016 Fixes #90. HeaderLibraries are now considered for forwarded dependencies when required by another HeaderLibrary or StaticLibrary. This captures any dependents on that HeaderLibrary which are required by a future link step.

25-Aug-2016 Issue #90. Added test HeaderLibraryTest2, to exercise a header library having a dependency on a static library, and an application then uses the header library. The static library dependency must be forwarded to the application link step.

23-Aug-2016 Fixes #285. VisualStudio solution files now embed a format version number dependent on the VisualC package used.

23-Aug-2016 Fixes #286. C.ICommonCompilerSettings.SystemIncludePaths are now honoured in VSSolution build mode. These are merged into any C.ICommonCompilerSettings.IncludePaths, with non-system paths appearing first (consistent with Native build mode behaviour).

23-Aug-2016 Issue #14. Paths that are in the special folders (c:\Program Files or c:\Program Files (x86)) are no longer translated to relative paths in VisualStudio projects.

21-Aug-2016 Fixes #171. Enabled Xcode minimal changes on incremental BuildAMation builds, so that only projects that have changed contents are rewritten. This has been enabled due to the fix to issue #222 for deterministic UUIDs used in Xcode projects.

21-Aug-2016 Collapsed LINQ queries of the form .Where(<expr>).FirstOrDefault() to .FirstOrDefault(<expr>).
